Bug 1299324: return error if an audio channel is already open until multi-mic support is done r=jib a=ritu

MozReview-Commit-ID: FrucH7XTh5j